src/assets/scss/Header.scss
@import "./Variable.scss";

.navigation {
    max-width: 1280px;
    margin: auto;

    .nav_toggle {
        display: none;
    }

    .header {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
        padding: 3rem 0;
        background-color: transparent;

        .header_logo_box {
            img {
                width: 99px;
            }
        }

        .header_item_box {
            font-size: 1.6rem;
            font-weight: $font-weight-regular;

            ul {
                display: flex;
                justify-content: space-around;
                align-items: center;
                gap: 2rem;

                li {
                    text-decoration: none;
                    list-style: none;


                    a {
                        text-decoration: none;
                        color: $primary-color;
                    }
                }
            }
        }

        .header_buttons_box {
            display: flex;
            font-size: 1.6rem;
            font-weight: $font-weight-regular;
            ;
            gap: 5rem;
            justify-content: space-between;
            text-decoration: none;

            button {
                background-color: transparent;
                border: none;
                cursor: pointer;

            }

            button:last-child {
                width: 137px;
                height: 52px;
                background-color: $header-button-color;
                color: $color-white;
            }
        }
    }
}

@media screen and (max-width: 870px) {
    .navigation {
        color: $color-white;

        .nav_toggle {
            display: block;
            position: absolute;
            right: 2rem;
            top: 2rem;
            border: none;
            color: white;
            background-color: $primary-color;
            padding: 1rem;
            z-index: 9;
        }

        .header {
            flex-direction: column;
            text-align: center;
            gap: 0;
            background-color: $color-white;

            .header_logo_box {
                img {
                    position: absolute;
                    left: 2rem;
                }
            }

            .header_item_box {
                width: 100%;

                ul {
                    flex-direction: column;
                    padding: 0;
                    gap: 0;

                    li {
                        border-bottom: 1px solid $primary-color;
                        width: 100%;
                        padding: 10px;
                    }
                }
            }

            .header_buttons_box {
                flex-direction: column;
                gap: 2rem;
            }


        }
    }
}

